Don't QI a node to nsIDOMElement and back to nsIContent for every call to nsEventStateManager::GetContentState.  (Bug 509889)  r=enndeakin